--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+.box{
+  display: flex;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  font-size: xx-large;
+}
